config/iptables_wifi_12-09-15_13-55
# Generated by iptables-save v1.4.21 on Sat Sep 12 13:55:37 2015
*nat
:PREROUTING ACCEPT [2:121]
:INPUT ACCEPT [2:121]
:OUTPUT ACCEPT [25:1535]
:POSTROUTING ACCEPT [1:60]
:AUTH_TESTE - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_FedoraWorkstation - [0:0]
:POST_FedoraWorkstation_allow - [0:0]
:POST_FedoraWorkstation_deny - [0:0]
:POST_FedoraWorkstation_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraWorkstation - [0:0]
:PRE_FedoraWorkstation_allow - [0:0]
:PRE_FedoraWorkstation_deny - [0:0]
:PRE_FedoraWorkstation_log - [0:0]
-A PREROUTING -p tcp -m state --state NEW -m tcp --dport 80 -j AUTH_TESTE
-A PREROUTING -p tcp -m state --state NEW -m tcp --dport 443 -j AUTH_TESTE
-A POSTROUTING -o enp0s25 -j MASQUERADE
-A AUTH_TESTE -d 23.97.96.32/32 -p tcp -j ACCEPT
-A AUTH_TESTE -s 192.158.1.1/32 -p tcp -j ACCEPT
-A AUTH_TESTE -p tcp -j DNAT --to-destination 192.158.1.1:3000
COMMIT
# Completed on Sat Sep 12 13:55:37 2015
# Generated by iptables-save v1.4.21 on Sat Sep 12 13:55:37 2015
*mangle
:PREROUTING ACCEPT [74680:88732165]
:INPUT ACCEPT [74055:88507979]
:FORWARD ACCEPT [619:223946]
:OUTPUT ACCEPT [59260:65084632]
:POSTROUTING ACCEPT [59959:65311950]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraWorkstation - [0:0]
:PRE_FedoraWorkstation_allow - [0:0]
:PRE_FedoraWorkstation_deny - [0:0]
:PRE_FedoraWorkstation_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -i wlp3s0 -g PRE_FedoraWorkstation
-A PREROUTING_ZONES -g PRE_FedoraWorkstation
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_log
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_deny
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_allow
COMMIT
# Completed on Sat Sep 12 13:55:37 2015
# Generated by iptables-save v1.4.21 on Sat Sep 12 13:55:37 2015
*security
:INPUT ACCEPT [74055:88507979]
:FORWARD ACCEPT [619:223946]
:OUTPUT ACCEPT [59260:65084632]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Sat Sep 12 13:55:37 2015
# Generated by iptables-save v1.4.21 on Sat Sep 12 13:55:37 2015
*raw
:PREROUTING ACCEPT [74680:88732165]
:OUTPUT ACCEPT [59260:65084632]
:OUTPUT_direct - [0:0]
:PREROUTING_direct - [0:0]
-A PREROUTING -j PREROUTING_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Sat Sep 12 13:55:37 2015
# Generated by iptables-save v1.4.21 on Sat Sep 12 13:55:37 2015
*filter
:INPUT ACCEPT [74055:88507979]
:FORWARD ACCEPT [619:223946]
:OUTPUT ACCEPT [59260:65084632]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_IN_ZONES_SOURCE - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:FORWARD_OUT_ZONES_SOURCE - [0:0]
:FORWARD_direct - [0:0]
:FWDI_FedoraWorkstation - [0:0]
:FWDI_FedoraWorkstation_allow - [0:0]
:FWDI_FedoraWorkstation_deny - [0:0]
:FWDI_FedoraWorkstation_log - [0:0]
:FWDO_FedoraWorkstation - [0:0]
:FWDO_FedoraWorkstation_allow - [0:0]
:FWDO_FedoraWorkstation_deny - [0:0]
:FWDO_FedoraWorkstation_log - [0:0]
:INPUT_ZONES - [0:0]
:INPUT_ZONES_SOURCE - [0:0]
:INPUT_direct - [0:0]
:IN_FedoraWorkstation - [0:0]
:IN_FedoraWorkstation_allow - [0:0]
:IN_FedoraWorkstation_deny - [0:0]
:IN_FedoraWorkstation_log - [0:0]
:OUTPUT_direct - [0:0]
COMMIT
# Completed on Sat Sep 12 13:55:37 2015
